installdir = $(datadir)/fonts

dist_install_DATA = \
	ae_AlMateen.ttf \
	analog.ttf \
	Army_Bold_G.ttf \
	army-digital.ttf \
	Army_Regular_L.ttf \
	ForgottenFuturistShadow.ttf \
	goodtime.ttf \
	andale.ttf \
	lcd.ttf \
	md_khmurabi_10.ttf \
	nmsbd.ttf \
	nmsbd2.ttf \
	tiny.ttf \
	titles.ttf \
	tuxtxt.otb \
	tuxtxt.ttf

if VUULTIMO
dist_install_DATA += analog.ttf Army_Regular_L.ttf Army_Bold_G.ttf army-digital.ttf
endif

if VUDUO2
dist_install_DATA += analog.ttf Army_Regular_L.ttf Army_Bold_G.ttf army-digital.ttf
endif

if ET10000
dist_install_DATA += analog.ttf Army_Regular_L.ttf Army_Bold_G.ttf army-digital.ttf
endif

if SKYLAKE
dist_install_DATA += analog.ttf Army_Regular_L.ttf Army_Bold_G.ttf army-digital.ttf
endif

if INIHDP
dist_install_DATA += analog.ttf Army_Regular_L.ttf Army_Bold_G.ttf army-digital.ttf
endif

if VUSOLO4K
dist_install_DATA += analog.ttf Army_Regular_L.ttf Army_Bold_G.ttf army-digital.ttf
endif

if ET8500
dist_install_DATA += goodtime.ttf
endif

if ET8500S
dist_install_DATA += goodtime.ttf
endif
